--- a/hieradata/vagrant/common.yaml
+++ b/hieradata/vagrant/common.yaml
@@ -17,6 +17,22 @@ profile::jenkinscontroller::ci_resource_domain: 'assets.localhost'
 profile::jenkinscontroller::proxy_port: 443
 profile::jenkinscontroller::groovy_init_enabled: false
 profile::jenkinscontroller::memory_limit: '14g'
+# Non functional key used to factorize code with a YAML anchor
+x-inbound-agent-init-shell-script: &InboundAgentInitShellScript
+  - "#!/bin/bash"
+  - "set -eux"
+  - echo "START CLOUDINIT"
+  - "sed 's/api_key:.*/api_key: SuperSecretThatShouldBeEncryptedInProduction/' /etc/datadog-agent/datadog.yaml.example > /etc/datadog-agent/datadog.yaml"
+  - "sed -i 's/# site:.*/site: datadoghq.com/' /etc/datadog-agent/datadog.yaml"
+  - systemctl stop datadog-agent.service
+  - mkdir -p /var/log/datadog /etc/datadog-agent
+  - chown dd-agent:dd-agent /etc/datadog-agent/datadog.yaml
+  - chmod 640 /etc/datadog-agent/datadog.yaml
+  - chown dd-agent:dd-agent /var/log/datadog
+  - chmod 770 /var/log/datadog
+  - systemctl start datadog-agent.service
+  - rm -f /etc/sudoers.d/90-cloud-init-users
+  - echo "END CLOUDINIT"
 profile::jenkinscontroller::jcasc:
   enabled: true
   reload_token: SuperSecretThatShouldBeEncryptedInProduction
@@ -181,98 +197,6 @@ profile::jenkinscontroller::jcasc:
         url: SuperSecretThatShouldBeEncryptedInProduction
         defaultNamespace: jenkins-agents
         # No agent definitions (to test an empty cloud)
-    ec2:
-      aws-us-east-2:
-        region: us-east-2
-        credentialsId: "aws-credentials-jenkins-ci"
-        sshKeysCredentialsId: "ec2-agent-ssh-2021-06"
-        agent_definitions:
-          - description: "Ubuntu 20.04 LTS"
-            maxInstances: 20
-            instanceType: T3Xlarge # 4 vCPUs / 16 Gb
-            os: "ubuntu"
-            os_version: "20.04"
-            architecture: "amd64"
-            labels:
-              - java
-              - docker
-              - linux
-              - linux-amd64
-            useAsMuchAsPossible: true
-            spot: true
-            userData: &BootstrapDatadogScript
-              - "#!/bin/bash"
-              - "set -eux"
-              - echo "START CLOUDINIT"
-              - "sed 's/api_key:.*/api_key: SuperSecretThatShouldBeEncryptedInProduction/' /etc/datadog-agent/datadog.yaml.example > /etc/datadog-agent/datadog.yaml"
-              - "sed -i 's/# site:.*/site: datadoghq.com/' /etc/datadog-agent/datadog.yaml"
-              - systemctl stop datadog-agent.service
-              - mkdir -p /var/log/datadog /etc/datadog-agent
-              - chown dd-agent:dd-agent /etc/datadog-agent/datadog.yaml
-              - chmod 640 /etc/datadog-agent/datadog.yaml
-              - chown dd-agent:dd-agent /var/log/datadog
-              - chmod 770 /var/log/datadog
-              - systemctl start datadog-agent.service
-              - rm -f /etc/sudoers.d/90-cloud-init-users
-              - echo "END CLOUDINIT"
-          - description: "Windows 2019"
-            maxInstances: 10
-            instanceType: T3Xlarge # 4 vCPUs / 16 Gb
-            os: "windows"
-            os_version: "2019"
-            architecture: "amd64"
-            labels:
-              - docker-windows
-              - docker-windows-2019
-            useAsMuchAsPossible: true
-            spot: false
-            userData:
-              #this script is ran before the agent service startup so no need to restart it
-              - <powershell>
-              - "(Get-Content C:\\ProgramData\\Datadog\\datadog.yaml -Raw) -Replace 'api_key:', 'api_key: SuperSecretThatShouldBeEncryptedInProduction' | Set-Content C:\\ProgramData\\Datadog\\datadog.yaml"
-              - </powershell>
-          - description: "Windows 2022"
-            maxInstances: 10
-            instanceType: T3Xlarge # 4 vCPUs / 16 Gb
-            os: "windows"
-            os_version: "2022"
-            architecture: "amd64"
-            labels:
-              - docker-windows-2022
-              - windows-2022
-            useAsMuchAsPossible: true
-            spot: false
-            userData:
-              #this script is ran before the agent service startup so no need to restart it
-              - <powershell>
-              - "(Get-Content C:\\ProgramData\\Datadog\\datadog.yaml -Raw) -Replace 'api_key:', 'api_key: SuperSecretThatShouldBeEncryptedInProduction' | Set-Content C:\\ProgramData\\Datadog\\datadog.yaml"
-              - </powershell>
-          - description: "High memory ubuntu 20.04 (ondemand)"
-            maxInstances: 50
-            instanceType: M54xlarge # 16 vCPUS / 64 Gb
-            os: "ubuntu"
-            os_version: "20.04"
-            architecture: "amd64"
-            labels:
-              - highmem
-              - highram
-              - docker-highmem
-              - linux-amd64-big
-            useAsMuchAsPossible: false
-            spot: false
-            userData: *BootstrapDatadogScript
-          - description: "ARM64 ubuntu 20.04"
-            maxInstances: 5
-            instanceType: A1Xlarge # 4 vCPUs / 8 Gb
-            os: "ubuntu"
-            os_version: "20.04"
-            architecture: "arm64"
-            labels:
-              - arm64docker
-              - arm64linux
-            useAsMuchAsPossible: false
-            spot: true
-            userData: *BootstrapDatadogScript
     azure-vm-agents:
       azureCredentialsId: "azure-credentials"
       resource_group: eastus-cijenkinsio
@@ -298,7 +222,7 @@ profile::jenkinscontroller::jcasc:
           virtualNetworkResourceGroupName: "prod-jenkins-public-prod"
           subnetName: "ci.j-agents-vm"
           spot: true
-          initScript: *BootstrapDatadogScript
+          initScript: *InboundAgentInitShellScript
         - name: "ubuntu-22-arm64"
           description: "Ubuntu 22.04 LTS ARM64"
           imageDefinition: jenkins-agent-ubuntu-22.04-arm64
@@ -320,7 +244,7 @@ profile::jenkinscontroller::jcasc:
           virtualNetworkResourceGroupName: "prod-jenkins-public-prod"
           subnetName: "ci.j-agents-vm"
           spot: true
-          initScript: *BootstrapDatadogScript
+          initScript: *InboundAgentInitShellScript
         - name: "ubuntu-20-highmem"
           description: "Ubuntu 20.04 LTS Highmem"
           imageDefinition: jenkins-agent-ubuntu-20.04-amd64
@@ -343,7 +267,7 @@ profile::jenkinscontroller::jcasc:
           virtualNetworkResourceGroupName: "prod-jenkins-public-prod"
           subnetName: "ci.j-agents-vm"
           spot: true
-          initScript: *BootstrapDatadogScript
+          initScript: *InboundAgentInitShellScript
         - name: "win-2019" # The name must not contains "windows" or Azure API complains :facepalm:
           description: "Windows 2019"
           imageDefinition: jenkins-agent-windows-2019-amd64
@@ -444,7 +368,6 @@ profile::jenkinscontroller::plugins:
   - credentials-binding
   - datadog
   - docker-workflow
-  - ec2
   - embeddable-build-status
   - git-client
   - git
