--- a/hieradata/vagrant/common.yaml
+++ b/hieradata/vagrant/common.yaml
@@ -194,7 +194,7 @@ profile::jenkinscontroller::jcasc:
     azure_vm_agents:
       clouds:
         azure-vms:
-          azureCredentialsId: "azure-credentials"
+          azureCredentialsId: azure-credentials
           resourceGroup: ci-jenkins-io-ephemeral-agents
           virtualNetworkName: "vnet"
           virtualNetworkResourceGroupName: "vnet-rg"
@@ -290,34 +290,46 @@ profile::jenkinscontroller::jcasc:
           usePrivateIP: true
           spot: false
     azure-container-agents:
-      aci-windows:
-        credentialsId: "azure-credentials"
-        resourceGroup: ci-jenkins-io-ephemeral-agents
-        agent_definitions:
-          - name: maven-8-windows
-            os: windows
-            command: 'pwsh.exe C:/ProgramData/Jenkins/jenkins-agent.ps1 -Url ^${rootUrl} -Secret ^${secret} -Name ^${nodeName}'
-            cpus: 4
-            memory: 8
-            agentJavaBin: 'C:/openjdk-17/bin/java' # From image jenkins/inbound-agent:jdk17-nanoserver
-            labels:
-              - maven-windows
-          - name: maven-11-windows
-            os: windows
-            command: 'pwsh.exe C:/ProgramData/Jenkins/jenkins-agent.ps1 -Url ^${rootUrl} -Secret ^${secret} -Name ^${nodeName}'
-            cpus: 4
-            memory: 8
-            agentJavaBin: 'C:/openjdk-17/bin/java' # From image jenkins/inbound-agent:jdk17-nanoserver
-            labels:
-              - maven-11-windows
-          - name: maven-17-windows
-            os: windows
-            command: 'pwsh.exe C:/ProgramData/Jenkins/jenkins-agent.ps1 -Url ^${rootUrl} -Secret ^${secret} -Name ^${nodeName}'
-            cpus: 4
-            memory: 8
-            agentJavaBin: 'C:/openjdk-17/bin/java' # From image jenkins/inbound-agent:jdk17-nanoserver
-            labels:
-              - maven-17-windows
+      clouds:
+        aci-windows:
+          credentialsId: azure-credentials
+          resourceGroup: ci-jenkins-io-ephemeral-agents
+        aci-windows-jenkins-sponsorship:
+          credentialsId: azure-jenkins-sponsorship-credentials
+          resourceGroup: ci-jenkins-io-ephemeral-agents
+      agent_definitions:
+        - name: maven-8-windows
+          os: windows
+          command: 'pwsh.exe C:/ProgramData/Jenkins/jenkins-agent.ps1 -Url ^${rootUrl} -Secret ^${secret} -Name ^${nodeName}'
+          cpus: 4
+          memory: 8
+          agentJavaBin: 'C:/openjdk-17/bin/java' # From image jenkins/inbound-agent:jdk17-nanoserver
+          labels:
+            - maven-windows
+        - name: maven-11-windows
+          os: windows
+          command: 'pwsh.exe C:/ProgramData/Jenkins/jenkins-agent.ps1 -Url ^${rootUrl} -Secret ^${secret} -Name ^${nodeName}'
+          cpus: 4
+          memory: 8
+          agentJavaBin: 'C:/openjdk-17/bin/java' # From image jenkins/inbound-agent:jdk17-nanoserver
+          labels:
+            - maven-11-windows
+        - name: maven-17-windows
+          os: windows
+          command: 'pwsh.exe C:/ProgramData/Jenkins/jenkins-agent.ps1 -Url ^${rootUrl} -Secret ^${secret} -Name ^${nodeName}'
+          cpus: 4
+          memory: 8
+          agentJavaBin: 'C:/openjdk-17/bin/java' # From image jenkins/inbound-agent:jdk17-nanoserver
+          labels:
+            - maven-17-windows
+        - name: maven-21-windows
+          os: windows
+          command: 'pwsh.exe C:/ProgramData/Jenkins/jenkins-agent.ps1 -Url ^${rootUrl} -Secret ^${secret} -Name ^${nodeName}'
+          cpus: 4
+          memory: 8
+          agentJavaBin: 'C:/openjdk-17/bin/java' # From image jenkins/inbound-agent:jdk17-nanoserver
+          labels:
+            - maven-21-windows
   artifact_caching_proxy:
     disabled: false
   datadog:
