--- a/hieradata/clients/controller.ci.jenkins.io.yaml
+++ b/hieradata/clients/controller.ci.jenkins.io.yaml
@@ -288,7 +288,7 @@ profile::jenkinscontroller::jcasc:
             cpus: 1
             memory: 1
       doks:
-        enabled: true
+        enabled: false # While working on https://github.com/jenkins-infra/helpdesk/issues/3916
         provider: do
         credentialsId: "doks-jenkins-agent-sa-token"
         serverCertificate: >
